# Techniker_23-24_For-Schleife

./: CMakeLists.txt  main.c
